src/test/deca/extension/codegen/invalid/test_access_non_initalisee.ass
	ADDSP #4
; start main program
; -------------------------------------
;        Method Table
; -------------------------------------
	LOAD #null, R0
	STORE R0, 3(GB)
	LOAD code.Object.equals, R0
	STORE R0, 4(GB)
; -------------------------------------
;        Main program
; -------------------------------------
; Beginning of main instructions:
; --------StartNewTable--------[10, 16]-----
; [NewTable][loadItemintoRegister] loading NewTable  =  int[][] into memory at register R2
	LOAD #2, R3	; loading 2 into memory
	LOAD #15, R4	; loading 15 into memory
	LOAD R3, R1
	MUL R4, R1
	ADD #2, R1
	NEW R1, R0
	STORE R3, 0(R0)
	STORE R4, 1(R0)
	LOAD R0, R2
; --------EndNewTable--------[10, 16]-----
	STORE R2, 1(GB)	; Initializing the variable x and loading it into memory
	LOAD #5, R2	; loading 5 into memory
	STORE R2, 2(GB)	; Initializing the variable a and loading it into memory
; --------BeginAssignOp--------[12, 4]-----
	LOAD 2(GB), R3	; loading a into memory
; --------StartStoreTableElements--------[12, 4]-----
; [TableGetElement][loadItemintoRegister] storing into TableGetElement  =  x the value in R3
	LOAD #1, R4	; loading 1 into memory
	LOAD #10, R5	; loading 10 into memory
	LOAD 1(GB), R1	; loading x into memory
	LOAD 0(R1), R0	; loading size 1d of x into memory
	MUL R0, R4
	LOAD 1(R1), R0	; loading size 2d of x into memory
	ADD R5, R4	; adding index_y to size1D*index_x
	LOAD R4, R0
	STORE R3, 2(R1, R0)	; Selecting the elemnt stored in 2(R1, R0)
; --------EndStoreTableElements--------[12, 4]-----
; --------EndAssignOp--------[12, 4]-----
; --------BeginAssignOp--------[13, 4]-----
; --------StartGetTableElements--------[13, 8]-----
; [TableGetElement][loadItemintoRegister] loading TableGetElement  =  x into memory at register R3
	LOAD #1, R4	; loading 1 into memory
	LOAD #10, R5	; loading 10 into memory
	LOAD 1(GB), R1	; loading x into memory
	LOAD 0(R1), R0	; loading size 1d of x into memory
	MUL R0, R4
	LOAD 1(R1), R0	; loading size 2d of x into memory
	ADD R5, R4
	LOAD 2(R1, R4), R0
	LOAD R0, R3
; --------EndGetTableElements--------[13, 8]-----
	STORE R3, 2(GB)	;  Assiging a value to a
	LOAD R3, R2	;  Return value of the assignement of =aand storing it into R2
; --------EndAssignOp--------[13, 4]-----
	HALT
; -------------------------------------
;        Classes
; -------------------------------------
; -------------------------------------
;        Method equal
; -------------------------------------
; ------------------Start generateCodeForObjectEquals location:
code.Object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	SEQ R0	; Comparaison this et paramètre d'equals
fin.Object.equals:
	RTS
; -------------------------------------
;        Liste Erreur
; -------------------------------------
stack_overflow_error:
	WSTR "Error: stack_overflow_error"
	WNL
	ERROR
; end main program
